@@ -1,3 +1,7 @@
+2011-05-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* absolute.c: Partially revert the minor rewrite.
+
 2011-05-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* absolute.c: Minor rewrite.
